# hm_beta_1_Turovskaya

./: pyproject.toml
data/: operations.json  settings.py  test_operations.json
src/: decorators.py  generators.py  masks.py  operations.py  processing.py  transactions.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
